# jax_gptq

./: .gitignore  README.md  pyproject.toml
scripts/: bench_blocked_pivoted_qr.py  bench_smallest_rank_deficient_qr.py  debug_pallas_backend.py  debug_smallest_rank_deficient_qr.py  run_blocked_pivoted_qr.py  run_noop_pipeline.py  smoke.py  smoke_tpu_reflector.py  sweep_blocked_pivoted_qr.py
src/jax_gptq/: __init__.py  config.py  data.py  eval.py  gptq_ref.py  modeling.py  noop_quant.py  qronos_ref.py  quant.py  stats.py  utils.py
src/jax_gptq/pallas/: __init__.py  backend.py  blocked_pivoted_qr.py  gpu_kernels.py  tpu_kernels.py
tests/: test_blocked_pivoted_qr.py
